fix: improve spacing a bit with IconButtonToggle in DataTable (#1020)
* fix: improve spacing a bit with IconButtonToggle in DataTable

* fix: newline at end of file

--- a/src/IconButtonToggle/IconButtonToggle.scss
+++ b/src/IconButtonToggle/IconButtonToggle.scss
@@ -1,6 +1,6 @@
 .pgn__icon-button-toggle__container {
     display: flex;
     .btn-icon + .btn-icon {
-        margin-left: map_get($spacers, 1\.5);
+        margin-left: map_get($spacers, 1);
     }
 }
